Fix the table cell when texts overflow

--- a/laptopspecs/laptop/static/laptop/css/item-list.css
+++ b/laptopspecs/laptop/static/laptop/css/item-list.css
@@ -16,7 +16,6 @@ thead th:nth-child(1) {
 
 th, td {
     padding: 1em;
-    margin: 1em;
     position: relative;
 }
 
@@ -34,13 +33,9 @@ tbody tr:hover {
 
 td > .row-link {
     display: flex;
+    height:fit-content;
     text-decoration: none;
     justify-content: center;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
 }
 
 td > .row-link:hover {
@@ -49,6 +44,6 @@ td > .row-link:hover {
 
 td > .row-link > p {
     color: var(--text);
-    text-align: left;
+    text-align: center;
     width: fit-content;
 }
